# cookerpoker

./: .gitignore  Cargo.toml  README.md  test.sh
.cargo/: config
.github/workflows/: rust.yml
docs/: client-server-api.md  game-log-plans.md
poker-bin/: Cargo.toml
poker-client/: Cargo.toml  build.sh
poker-client/src/: actionlog.rs  elements.rs  http.rs  lib.rs  player_info.rs  utils.rs
poker-client/tests/: loginout.rs  table-mgmt.rs  toy_endpoint.rs
poker-core/: Cargo.toml
poker-core-py/: Cargo.toml  build.sh  pyproject.toml
poker-core-py/src/: lib.rs
poker-core/src/: bet.rs  cards.rs  deck.rs  game.rs  hand.rs  lib.rs  log.rs  new.rs  player.rs  pot.rs  state.rs  util.rs
poker-core/src/cards/: card.rs  deck.rs  hand.rs
poker-core/src/game/: log.rs  players.rs  pot.rs  table.rs
poker-core/src/old/: game.rs
poker-core/src/old/cards/: deck.rs
poker-core/src/old/game/: log.rs
poker-messages/: Cargo.toml
poker-messages/src/: action.rs  devonly.rs  game.rs  lib.rs  state.rs  table_mgmt.rs
poker-server/: Cargo.toml  README.md  Rocket.toml  database.rs  manage.py  requirements.txt  test.db
poker-server.old/: Cargo.toml
poker-server.old/migrations/2021-11-13-022411_accounts/: down.sql  up.sql
poker-server.old/src/: endpoints.rs  main.rs
poker-server.old/src/database/: schema.rs
poker-server.old/src/endpoints/: accounts.rs  api.rs  tables.rs
poker-server.old/src/endpoints/forms/: accounts.rs
poker-server.old/src/endpoints/logic/: table.rs
poker-server.old/src/models/: accounts.rs  tables.rs
poker-server.old/static/: mvp.css  poker_client.js
poker-server.old/templates/: base.html.tera  list_tables.html.tera  mod_settled.html.tera  table_settings.html.tera
poker-server/database/src/: schema.rs
poker-server/migrations/2021-11-13-022411_accounts/: down.sql  up.sql
poker-server/poker_server/: asgi.py  settings.py  urls.py  wsgi.py
poker-server/src/: account.rs  database.rs  endpoints.rs  main.rs  models.rs  table.rs
poker-server/src/account/: endpoints.rs  forms.rs
poker-server/src/database/: models.rs  schema.rs  test.db
poker-server/src/endpoints/: accounts.rs  api.rs  forms.rs  index.rs  logic.rs  tables.rs
poker-server/src/endpoints/forms/: tables.rs
poker-server/src/endpoints/logic/: account.rs  game.rs  mod.rs  table.rs
poker-server/src/models/: accounts.rs  tables.rs
poker-server/src/table/: endpoints.rs  forms.rs
poker-server/static/: animate.js  index.html  mvp.css  poker_client_bg.wasm  table.css  table.js  table_vars.js
poker-server/tables/: forms.py  models.py  urls.py  views.py
poker-server/tables/migrations/: 0001_initial.py  0002_table_creation_date.py  0003_tablestate.py  0004_alter_table_creation_date.py
poker-server/tables/templates/tables/: detail.html  index.html  play.html
poker-server/templates/: base.html  base.html.tera  get_accounts.html.tera  home.html  index.html.tera  list_tables.html.tera  logged_in.html.tera  login.html.tera  mod_settled.html.tera  table_settings.html.tera
poker-server/templates/registration/: login.html
poker-server/users/: forms.py  urls.py  views.py
poker-server/users/templates/registration/: login.html
poker-server/users/templates/users/: register.html
src/: main.rs
tests/manual-game/: Makefile
tests/manual-game/fold-to-allin/: input.txt
tests/manual-game/fold-to-bb/: args.txt  input.txt  seed.txt  test.sh
tests/manual-game/fold-to-raise/: args.txt  test.sh
tests/manual-game/heads-up-allin-1/: args.txt  input.txt  test.sh
tests/manual-game/heads-up-allin-2/: args.txt  input.txt  test.sh
tests/manual-game/heads-up-fold/: args.txt  test.sh
tests/web-integration/: Makefile  README.md  start-server.sh  stop-server.sh
tests/web-integration/loginout/: input.sql
tests/web-integration/table-mgmt/: input.sql
