[package]
name = "poker-core-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "poker_core_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
poker-core = { path = "../poker-core" }
poker-messages = { path = "../poker-messages" }
serde_json = "1.0.75"
derive_more = "0.99.17"

