[package]
name = "poker-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1.0.132", features = ["derive"] }
derive_more = "0.99.17"
base64ct = "1.3.1"
