[package]
name = "poker-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
blake3 = "1.4.1"
enum-map = "2.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.183", features = ["derive"] }
derive_more = "0.99.17"
base64ct = "1.5.3"
bitflags = "2.4.0"

[dev-dependencies]
serde_json = "*"
