[package]
name = "poker-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker-core = { path = "../poker-core" }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"
