[package]
name = "poker-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
poker-core = { path = "../poker-core" }
poker-messages = { path = "../poker-messages" }
diesel = { version = "1.4.8", features = ["sqlite"] }
derive_more = "0.99.17"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_sqlite_pool"] }
tera = { version = "1.15.0", default-features = false }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
